Ajout d'un popup fonctionnel pour gererUE + suppression d'un lien caché

--- a/front_office/package.json
+++ b/front_office/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Agenda Prévisionnel",
+  "name": "angular-quickstart",
   "version": "1.0.0",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
